build_out3.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : D:\a
ppointivahealth\app\
src\main\java\com\ex
ample\appointivaheal
th\activities\Doctor
DashboardActivity.ja
va:151: error: ';' 
expected
At line:1 char:1
+ .\gradlew.bat 
assembleDebug > 
build_out2.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo  
            : NotS  
  pecified: (D:\a   
 ppointivahe...r    
: ';' expected:    
String) [], Rem    
oteException
    + FullyQualifie 
   dErrorId : Nati  
  veCommandError
 
            public 
void onCancelled(@No
nNull DatabaseError 
error) {
                    
               ^
D:\appointivahealth\
app\src\main\java\co
m\example\appointiva
health\activities\Do
ctorDashboardActivit
y.java:151: error: 
';' expected
            public 
void onCancelled(@No
nNull DatabaseError 
error) {
                    
                    
                    
    ^
D:\appointivahealth\
app\src\main\java\co
m\example\appointiva
health\activities\Do
ctorDashboardActivit
y.java:154: error: 
illegal start of 
type
        });
         ^
D:\appointivahealth\
app\src\main\java\co
m\example\appointiva
health\activities\Do
ctorDashboardActivit
y.java:155: error: 
')' expected
    }
     ^
D:\appointivahealth\
app\src\main\java\co
m\example\appointiva
health\activities\Do
ctorDashboardActivit
y.java:157: error: 
illegal start of 
expression
    private void loa
dRecentMedicalRecord
s(String doctorId) {
    ^
5 errors

[Incubating] Problems report is available at: file:///D:/appointivahealth/build/reports/problems/problems-report.html

FAILURE: Build 
failed with an 
exception.

* What went wrong:
Execution failed 
for task ':app:compi
leDebugJavaWithJavac
'.
> Compilation 
failed; see the 
compiler output 
below.
  D:\appointivahealt
h\app\src\main\java\
com\example\appointi
vahealth\activities\
DoctorDashboardActiv
ity.java:157: 
error: illegal 
start of expression
      private void l
oadRecentMedicalReco
rds(String 
doctorId) {
      ^
  D:\appointivahealt
h\app\src\main\java\
com\example\appointi
vahealth\activities\
DoctorDashboardActiv
ity.java:154: 
error: illegal 
start of type
          });
           ^
  D:\appointivahealt
h\app\src\main\java\
com\example\appointi
vahealth\activities\
DoctorDashboardActiv
ity.java:151: 
error: ';' expected
              
public void onCancel
led(@NonNull 
DatabaseError 
error) {
                    
                 ^
  D:\appointivahealt
h\app\src\main\java\
com\example\appointi
vahealth\activities\
DoctorDashboardActiv
ity.java:151: 
error: ';' expected
              
public void onCancel
led(@NonNull 
DatabaseError 
error) {
                    
                    
                    
      ^
  D:\appointivahealt
h\app\src\main\java\
com\example\appointi
vahealth\activities\
DoctorDashboardActiv
ity.java:155: 
error: ')' expected
      }
       ^
  5 errors

* Try:
> Check your code 
and dependencies to 
fix the compilation 
error(s)
> Run with --scan 
to get full 
insights from a 
Build Scan (powered 
by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
8 actionable tasks: 1 executed, 7 up-to-date
